feat: add an interface to retrieve feed comment list (#368)
* feat: Add an interface to retrieve feed comment list

* fix: can't process the comment list response

* feat: add interface documentation
