# internal/api/routes.go
@@ -18,6 +18,7 @@ func (c *APIClient) SetupRoutes() {
 		c.engine.GET("/api/channels/live/replay/list", c.handleFetchLiveReplayList)
 		c.engine.GET("/api/channels/interactioned/list", c.handleFetchInteractionedFeedList)
 		c.engine.GET("/api/channels/shared_feed/profile", c.handleFetchSharedFeedProfile)
+		c.engine.GET("/api/channels/feed/comment/list", c.handleFetchFeedCommentList)
 		c.engine.GET("/rss/channels", c.handleFetchFeedListOfContactRSS)
 		// 公众号接口
 		c.engine.GET("/ws/mp", c.official.HandleWebsocket)
